# weathering

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile_backup  README.md  grabcut.cpp  testGeneration.cpp  testTransfert.cpp  testWeathering.cpp
includes/: AverageSumError.h  BorderKernelBlur.h  CORE.h  ClassicPositionChooser.h  DiffSumSqrtAtIJ.h  EpsilonBlockSelector.h  FullBlocksGenerator.h  ImageWeathering.h  NormalizedInvertedErrorMask.h  RandomBlocksGenerator.h  SeamCarvingMaskGenerator.h  SmoothMask.h  TextureGenerator.h  TextureTransfert.h  TopTenBlockSelector.h
nlopt-2.5.0/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  NLoptLibraryDepends.cmake  libnlopt.so.0.9.0
nlopt-2.5.0/test/: CTestTestfile.cmake  testopt
src/: AverageSumError.cpp  BorderKernelBlur.cpp  CORE.cpp  ClassicPositionChooser.cpp  DiffSumSqrtAtIJ.cpp  EpsilonBlockSelector.cpp  FullBlocksGenerator.cpp  ImageWeathering.cpp  NormalizedInvertedErrorMask.cpp  RandomBlocksGenerator.cpp  SeamCarvingMaskGenerator.cpp  SmoothMask.cpp  TextureGenerator.cpp  TextureTransfert.cpp  TopTenBlockSelector.cpp
